building out homepage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Title</title>
   <link href="reset.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans+Condensed:300|Playfair+Display|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
@@ -23,31 +23,52 @@
     <header>
       <section class="header-background">
         <article class="text">
-          <h2>Picture and logo and stuff</h2>
-          <h3>Your journey to a skinnier you starts here</h3>
+          <img src="logo.png">
         </article>
       </section>
     </header>
-  <section class="light-grey container">
-    <article class="three">
-      <h3><i class="far fa-clock fa-4x"></i></h3>
-    </article>
-    <article class="three">
-      <h3><i class="fas fa-venus fa-4x"></i></h3>
-    </article>
-    <article class="three">
-      <h3><i class="fas fa-utensils fa-4x"></i></h3>
-    </article>
-    <article class="three">
-      <h3><i class="fas fa-crosshairs fa-4x"></i></h3>
-    </article>
-    <article class="three">
-      <h3><i class="fas fa-flask fa-4x"></i></h3>
-    </article>
-    <article class="three">
-      <h3><i class="fas fa-umbrella-beach fa-4x"></i></h3>
+
+  <section class="light-grey container intro">
+    <article class="small">
+      <h2>Your journey to a skinnier you starts here</h2>
+      <div class="intro-div">
+      </div>
     </article>
   </section>
+
+<section class="white container images">
+    <article class="three food-img">   
+    </article>
+    <article class="three">
+      <h3>Skip the workouts</h3>
+    </article>
+    <article class="three bikini-img">
+    </article>
+    <article class="three">
+      <h3>No diets necessary</h3>
+    </article>
+    <article class="three workout-img">
+    
+    </article>
+    <article class="three">
+      <h3>Targeted results</h3>
+    </article>
+  </section>
+
+
+  <section class="pink container">
+    <section class="small">
+    <h2>Featured Product</h2>
+    <article class="container featured">
+      <section class="two left">
+        <img src="burn-maxx.png">
+      </section>
+      <section class="two right">
+      </section>
+    </article>
+    </section>
+  </section>
+
   <section class="pink">
     <h3>Section Two</h3>
   </section>
