--- a/index.html
+++ b/index.html
@@ -12,69 +12,102 @@
 
 <body>
   <main>
-    <nav>
-      <p class="logo">Logo</p>
-      <ul>
-        <li>Home</li>
-        <li>How it Works</li>
-        <li class="dark-pink">Shop</li>
-      </ul>
+    <nav class="container">
+      <section class="nav-left left">
+        <ul>
+          <li><span class="padded"><a href="index.html">Home</a></span></li>
+          <li>How it works</li>
+        </ul>
+      </section>
+      <section class="nav-center">
+        <a href="index.html"><img src="little-logo.png" class="little-logo"></a>
+      </section>
+      <section class="nav-right right">
+        <ul>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="shop.html">Shop</a></li>
+        </ul>
+      </section>
     </nav>
+
     <header>
       <section class="header-background">
         <article class="text">
           <img src="logo.png">
         </article>
+          <a class="button">Shop Now</a>
       </section>
     </header>
 
-  <section class="light-grey container intro">
-    <article class="small">
-      <h2>Your journey to a skinnier you starts here</h2>
-      <div class="intro-div">
-      </div>
-    </article>
-  </section>
+    <section class="light-grey container intro">
+      <article class="small">
+        <h2>The journey to a skinnier you starts here</h2>
+        <div class="intro-div"></div>
+        <p>Compared to traditional diets and exercise that deliver all over fat loss,
+           <span class="bold">Just For Her</span> is formulated specifically for women
+           to help remove stubborn body fat while maintaining your feminine curves.
 
-<section class="white container images">
-    <article class="three food-img">   
-    </article>
-    <article class="three">
-      <h3>Skip the workouts</h3>
-    </article>
-    <article class="three bikini-img">
-    </article>
-    <article class="three">
-      <h3>No diets necessary</h3>
-    </article>
-    <article class="three workout-img">
-    
-    </article>
-    <article class="three">
-      <h3>Targeted results</h3>
-    </article>
-  </section>
+            With just 2 capsules a day, our high quality, science-backed 
+            formula helps you burn fat, support weight loss, decrease your appetite, and increase
+            lipid fat oxidation.
 
-
-  <section class="pink container">
-    <section class="small">
-    <h2>Featured Product</h2>
-    <article class="container featured">
-      <section class="two left">
-        <img src="burn-maxx.png">
-      </section>
-      <section class="two right">
-      </section>
-    </article>
+            Stop dreaming and start achieving your goals!
+          </p>
+ </article>
     </section>
-  </section>
 
-  <section class="pink">
-    <h3>Section Two</h3>
-  </section>
-    <section class="yellow">
-    <h3>Section three</h3>
-  </section>
+    <section class="white container images">
+      <article class="three food-img">   
+      </article>
+      <article class="three">
+        <h3>Skip the workouts</h3>
+        <p>Slim down, loose bloat, curb your appetite, and get beach-ready. 
+        No extreme lifestyle changes or gym memberships necessary.</p>
+      </article>
+      <article class="three bikini-img">
+      </article>
+      <article class="three">
+        <h3>No diets necessary</h3>
+        <p>Save yourself the effort and time of going through complicated detoxes and diets. 
+        Just 2 capsules a day is all you need!</p>
+      </article>
+      <article class="three workout-img">
+      </article>
+      <article class="three">
+        <h3>Targeted results</h3>
+        <p>Our powerful blend is custom-designed to work specifically 
+          with the unique biology and hormonal needs of women to slim your waist but maintain your curves.
+
+        </p>
+      </article>
+    </section>
+
+    <section class="pink container">
+      <section class="small featured">
+        <h2>Featured Product</h2>
+        <div class="intro-div"></div>
+        <article class="container">
+          <section class="two left">
+            <img src="burn-maxx.png">
+          </section>
+          <section class="two right">
+            <article class="product-description">
+            <h3><span class="bold">MAXX:</span> Maximum Strength Fat Burner</h3>
+            <p>Aliquam dignissim, urna ut laoreet dictum, sem erat tempor massa, 
+            sit amet convallis leo dui sed tortor. Morbi non cursus ligula. 
+            Quisque egestas, metus nec vulputate sollicitudin, metus eros ultrices mi, 
+            vitae auctor urna sapien ut erat.</p>
+            <a class="button">Add to cart</a>
+            </article>
+          </section>
+        </article>
+      </section>
+    </section>
+
+<!--   <section class="fruit-container">
+    <img src="fruit.jpg">
+  </section> -->
+
   </main>
 </body>
 
