--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="container">
       <section class="nav-left left">
         <ul>
-          <li><span class="padded"><a href="index.html">Home</a></span></li>
+          <li><a href="index.html" id="current">Home</a></li>
           <li><a href="about.html">How it works</a></li>
         </ul>
       </section>
@@ -32,7 +32,7 @@
 
     <header>
       <section class="header-background">
-        <article class="text">
+        <article class="header-img">
           <img src="logo.png">
         </article>
           <a class="button">Shop Now</a>
