--- a/shop.html
+++ b/shop.html
@@ -16,7 +16,7 @@
       <section class="nav-left left">
         <ul>
           <li><span class="padded"><a href="index.html">Home</a></span></li>
-          <li>How it works</li>
+          <li><a href="about.html">How it works</a></li>
         </ul>
       </section>
       <section class="nav-center">
