made contact page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>JUST FOR HER</title>
   <link href="reset.css" rel="stylesheet">
+  <link href="layout.css" rel="stylesheet">
+  <link href="modules.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <link href="text.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans+Condensed:300|Playfair+Display|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -15,8 +18,8 @@
     <nav class="container">
       <section class="nav-left left">
         <ul>
-          <li><span class="padded"><a href="index.html">Home</a></span></li>
-          <li><a href="about.html">How it works</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" id="current">How it works</a></li>
         </ul>
       </section>
       <section class="nav-center">
