--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Title</title>
+  <title>JUST FOR HER</title>
   <link href="reset.css" rel="stylesheet">
+  <link href="layout.css" rel="stylesheet">
+  <link href="modules.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <link href="text.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans+Condensed:300|Playfair+Display|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -35,7 +38,7 @@
         <article class="header-img">
           <img src="logo.png">
         </article>
-          <a class="button">Shop Now</a>
+          <a href="shop.html" class="button">Shop Now</a>
       </section>
     </header>
 
@@ -85,19 +88,21 @@
     <section class="pink container">
       <section class="small featured">
         <h2>Featured Product</h2>
-        <div class="intro-div"></div>
+        <div class="pink-line"></div>
         <article class="container">
           <section class="two left">
-            <img src="burn-maxx.png">
+            <article class="featured-img">
+              <img src="burn-maxx.png">
+            </article>
           </section>
           <section class="two right">
-            <article class="product-description">
-            <h3><span class="bold">MAXX:</span> Maximum Strength Fat Burner</h3>
-            <p>Aliquam dignissim, urna ut laoreet dictum, sem erat tempor massa, 
-            sit amet convallis leo dui sed tortor. Morbi non cursus ligula. 
-            Quisque egestas, metus nec vulputate sollicitudin, metus eros ultrices mi, 
-            vitae auctor urna sapien ut erat.</p>
-            <a class="button">Add to cart</a>
+            <article class="featured-description">
+              <h3><span class="bold">MAXX:</span> Maximum Strength Fat Burner</h3>
+              <p>Aliquam dignissim, urna ut laoreet dictum, sem erat tempor massa, 
+              sit amet convallis leo dui sed tortor. Morbi non cursus ligula. 
+              Quisque egestas, metus nec vulputate sollicitudin, metus eros ultrices mi, 
+              vitae auctor urna sapien ut erat.</p>
+              <a class="button">Add to cart</a>
             </article>
           </section>
         </article>
