updated shopping page

--- a/shop.html
+++ b/shop.html
@@ -33,13 +33,12 @@
       </section>
     </nav>
 
-    <section class="light-grey container products">
-      <section class="small">
-        <h2>Products</h2>
-        <div class="intro-div">
-        </div>
-        <article class="container">
-          <section class="two left">
+    <section class="dark-pink products">
+      <article class="container small">
+        <h2 class="center-text">Products</h2>
+        <div class="pink-line"></div>
+        <section class="two left">
+          <article class="product-container">
             <img src="burn-maxx.png">
             <h3>Maximum Strength</h3>
             <p><i class="fas fa-star"></i>
@@ -50,8 +49,10 @@
             <p>A little text, yeah?</p>
             <p><span class="price">$100</span></p>
             <a class="button">Add to cart</a>
-          </section>
-          <section class="two right">
+          </article>
+        </section>
+        <section class="two right">
+          <article class="product-container">
             <img src="burn.png">
             <h3>Original Formula</h3>
             <p><i class="fas fa-star"></i>
@@ -62,32 +63,37 @@
             <p>A little text, yeah?</p>
             <p><span class="price">$100</span></p>
             <a class="button">Add to cart</a>
-          </section>
-        </article>
+          </article>
+        </section>
+      <!-- </article> -->
         <article class="container">
           <section class="two left">
-            <img src="appetite.png">
-            <h3>Appetite Suppressant</h3>
-            <p><i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star-half-alt"></i></p>
-            <p>A little text, yeah?</p>
-            <p><span class="price">$100</span></p>
-            <a class="button">Add to cart</a>
+            <article class="product-container">
+              <img src="appetite.png">
+              <h3>Appetite Suppressant</h3>
+              <p><i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i></p>
+              <p>A little text, yeah?</p>
+              <p><span class="price">$100</span></p>
+              <a class="button">Add to cart</a>
+            </article>
           </section>
           <section class="two right">
-            <img src="carb.png">
-            <h3>Carb Blocker</h3>
-            <p><i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star-half-alt"></i>
-              <i class="far fa-star"></i></p>
-            <p>A little text, yeah?</p>
-            <p><span class="price">$100</span></p>
-            <a class="button">Add to cart</a>
+            <article class="product-container">
+              <img src="carb.png">
+              <h3>Carb Blocker</h3>
+              <p><i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i>
+                <i class="far fa-star"></i></p>
+              <p>A little text, yeah?</p>
+              <p><span class="price">$100</span></p>
+              <a class="button">Add to cart</a>
+            </article>
           </section>
         </article>
       </section>
