fixed shop page

--- a/about.html
+++ b/about.html
@@ -39,12 +39,13 @@
         <article class="small white about-container">
           <h2 class="center-text">How it Works</h2>
           <div class="pink-line"></div>
+          <section class="small">
           <p>Introducing a breakthrough that makes losing weight 
             easier for women. </p>
-
-             <p>Using the highest levels of ingredient purity and potency in our ground-breaking 
-             formula, <span class="bold">Just for Her</span> is designed to help women lose 3 times the weight in 23 weeks.</p>
-            
+            <p><span class="bold">Just for Her</span> is expertly formulated 
+              with the highest levels of ingredient purity and potency that 
+            work together synergistically to help women remove stubborn body fat while maintaining their feminine curves. </p>
+             </section>
           <section class="container">
             <article class="two-small left">
               <i class="fas fa-venus fa-5x"></i>
@@ -70,10 +71,12 @@
               loss supplement designed specifically for a woman’s body to combat the six 
               ways our bodies work against us.</p> -->
           </article>
-          <article class="two-small left">
+        </section>
+        <section class="container">
+          <article class="two-small right">
                <i class="fas fa-flask fa-4x"></i>
             </article>
-            <article class="two-big right">
+            <article class="two-big left">
             <h3>Backed by Science</h3>
             <p>The key to the best fat burner for women starts with the ingredients. </p>
             <!-- <p>Our products our created using the highest levels purity and potency, 54 ingredient purity and potency54 ingredients -->
@@ -98,6 +101,8 @@
 </p>
             <p>An Effective ALL NATURAL Fat Burner With 7 Synergistic Science-Backed Fat Burning Ingredients Formulated Specifically For Women.</p>
           --> </article>
+        </section>
+        <section class="container">
           <article class="two-small left">
                <i class="fas fa-capsules fa-4x"></i>
             </article>
@@ -117,7 +122,50 @@
       </section>
         </article>
     </section>
-
+<footer class="light-grey">
+  <section class="small">
+    <article class="footer-container container">
+      <section class="two left">
+        <img src="logo.png">
+      </section>
+      <section class="two right">
+        <form action="">
+          <label for="subscribe">SIGN UP FOR OUR NEWSLETTER</label>
+          <input type="text" placeholder="Email Address" name="subscribe">
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
+    </article>
+    <article class="container">
+      <section class="three left">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">How It Works</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="shop.html">Shop</a></li>
+        </ul>
+      </section>
+      <section class="three left">
+      </section>
+      <section class="three left">
+        <h3>Contact</h3>
+        <ul>
+          <li><i class="fas fa-phone fa-lg"></i> (800) 367-4377</li>
+          <li><i class="fas fa-envelope fa-lg"></i> help@justforher.com</li>
+          <li><i class="fas fa-map-marker-alt fa-lg"></i> 5000 E Ocean Blvd Long Beach, CA</li>
+          <li><i class="fab fa-instagram fa-lg"></i>
+        <i class="fab fa-facebook-square fa-lg"></i>
+        <i class="fab fa-youtube fa-lg"></i>
+        <i class="fab fa-pinterest-p fa-lg"></i></li>
+        </ul>
+      </section>
+    </article>
+    <article class="center-text">
+      <p><i class="far fa-copyright"></i> 2018 <a href="">Adrienne Karnoski</a></p>
+    </article>
+  </section>
+</footer>
 
   </main>
 </body>
