--- a/shop.html
+++ b/shop.html
@@ -99,7 +99,50 @@
       </section>
     </section>
 
-
+<footer class="light-grey">
+  <section class="small">
+    <article class="footer-container container">
+      <section class="two left">
+        <img src="logo.png">
+      </section>
+      <section class="two right">
+        <form action="">
+          <label for="subscribe">SIGN UP FOR OUR NEWSLETTER</label>
+          <input type="text" placeholder="Email Address" name="subscribe">
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
+    </article>
+    <article class="container">
+      <section class="three left">
+        <h3>Navigation</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">How It Works</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="shop.html">Shop</a></li>
+        </ul>
+      </section>
+      <section class="three left">
+      </section>
+      <section class="three left">
+        <h3>Contact</h3>
+        <ul>
+          <li><i class="fas fa-phone fa-lg"></i> (800) 367-4377</li>
+          <li><i class="fas fa-envelope fa-lg"></i> help@justforher.com</li>
+          <li><i class="fas fa-map-marker-alt fa-lg"></i> 5000 E Ocean Blvd Long Beach, CA</li>
+          <li><i class="fab fa-instagram fa-lg"></i>
+        <i class="fab fa-facebook-square fa-lg"></i>
+        <i class="fab fa-youtube fa-lg"></i>
+        <i class="fab fa-pinterest-p fa-lg"></i></li>
+        </ul>
+      </section>
+    </article>
+    <article class="center-text">
+      <p><i class="far fa-copyright"></i> 2018 <a href="">Adrienne Karnoski</a></p>
+    </article>
+  </section>
+</footer>
   </main>
 </body>
 
