changed the wording

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 easier for women. </p>
               <p><span class="bold">Just for Her</span> is expertly formulated 
                 with the highest levels of ingredient purity and potency that 
-                work together synergistically to help women remove stubborn 
+                work together to help women remove stubborn 
                 body fat while maintaining their feminine curves. </p>
             </section>
             <section class="container">
@@ -55,9 +55,8 @@
               </article>
               <article class="two-big right">
                 <h3>Designed for women</h3>
-                <p>In addition to the various reasons
-                  it’s physically more difficult for women to lose weight, 
-                  once weight loss begins it often has undesired affects on 
+                <p>Studies have shown it’s physically more difficult for women to lose weight, 
+                  and once weight loss begins it often has undesired affects on 
                   their womanly curves.</p>
                 <p><span class="bold">Just for Her</span> was designed specifically 
                   for a woman’s body, targeting stubborn belly fat while avoiding 
