--- a/index.html
+++ b/index.html
@@ -93,17 +93,21 @@
         <article class="container">
           <section class="two left">
             <article class="featured-img">
-              <img src="burn-maxx.png">
+              <img src="burn.png">
             </article>
           </section>
           <section class="two right">
             <article class="featured-description">
-              <h3><span class="bold">MAXX:</span> Maximum Strength Fat Burner</h3>
-              <p>Aliquam dignissim, urna ut laoreet dictum, sem erat tempor massa, 
-              sit amet convallis leo dui sed tortor. Morbi non cursus ligula. 
-              Quisque egestas, metus nec vulputate sollicitudin, metus eros ultrices mi, 
-              vitae auctor urna sapien ut erat.</p>
+              <h3><span class="bold">BURN:</span> Fat Burner for Women</h3>
+              <h4>Original Formula</h4>
+              <p>Expertly formulated 
+                with the highest levels of ingredient purity and potency that 
+                work together to help women remove stubborn 
+                body fat while maintaining their feminine curves.</p>
+                <p>Manufactured in our personal lab, <span class="bold">Just for Her</span> is formulated with 
+                  clinical doses of 54 science-backed, highly concentrated fat burning ingredients.</p>
               <a class="button">Add to cart</a>
+              <p class="warning"><span class="bold">WARNING TO CALIFORNIA RESIDENTS:</span> Consuming this product can expose you to chemicals including lead and cadmium which are known to the State of California to cause cancer and birth defects or other reproductive harm.</p>
             </article>
           </section>
         </article>
