--- a/shop.html
+++ b/shop.html
@@ -39,19 +39,18 @@
         <div class="pink-line"></div>
         <section class="two left">
           <article class="product-container">
-            <img src="burn-maxx.png">
-            <h3>Maximum Strength</h3>
+            <img src="burn.png">
+            <h3>Original Formula</h3>
             <p><i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="far fa-star"></i></p>
-            <p>A little text, yeah?</p>
             <p><span class="price">$100</span></p>
             <a class="button">Add to cart</a>
           </article>
         </section>
-        <section class="two right">
+        <!-- <section class="two right">
           <article class="product-container">
             <img src="burn.png">
             <h3>Original Formula</h3>
@@ -64,9 +63,9 @@
             <p><span class="price">$100</span></p>
             <a class="button">Add to cart</a>
           </article>
-        </section>
+        </section> -->
       <!-- </article> -->
-        <article class="container">
+        <!-- <article class="container">
           <section class="two left">
             <article class="product-container">
               <img src="appetite.png">
@@ -94,7 +93,7 @@
               <p><span class="price">$100</span></p>
               <a class="button">Add to cart</a>
             </article>
-          </section>
+          </section> -->
         </article>
       </section>
     </section>
